--- a/GlobalHub/Services/NotificationService.API/NotificationService.API.csproj
+++ b/GlobalHub/Services/NotificationService.API/NotificationService.API.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>3d704e71-9215-4cf6-986a-749430d3ad48</UserSecretsId>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <DockerfileContext>.\..</DockerfileContext>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
